[package]
name = "vmm"
version = "0.1.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2021"

[features]
tee = []
amd-sev = [ "blk", "tee", "codicon", "kbs-types", "procfs", "rdrand", "serde", "serde_json", "sev", "curl" ]
net = []
blk = []
efi = [ "blk", "net" ]
gpu = []
snd = []

[dependencies]
crossbeam-channel = ">=0.5.15"
env_logger = "0.9.0"
flate2 = "1.0.35"
libc = ">=0.2.39"
linux-loader = { version = "0.13.0", features = ["bzimage", "elf", "pe"] }
log = "0.4.0"
vm-memory = { version = ">=0.13", features = ["backend-mmap"] }
rangemap = "1.5.1"

arch = { path = "../arch" }
devices = { path = "../devices" }
kernel = { path = "../kernel" }
utils = { path = "../utils"}
polly = { path = "../polly" }

# Dependencies for amd-sev
codicon = { version = "3.0.0", optional = true }
kbs-types = { version = "0.8.0", features = ["tee-sev", "tee-snp"], optional = true }
procfs = { version = "0.12", optional = true }
rdrand = { version = "^0.8", optional = true }
serde = { version = "1.0.125", optional = true }
serde_json = { version = "1.0.64", optional = true }
sev = { version = "6.0.0", features = ["openssl"], optional = true }
curl = { version = "0.4", optional = true }
nix = "0.24.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
bzip2 = "0.5"
cpuid = { path = "../cpuid" }
zstd = "0.13"

[target.'cfg(target_os = "linux")'.dependencies]
kvm-bindings = { version = ">=0.11", features = ["fam-wrappers"] }
kvm-ioctls = ">=0.21"

[target.'cfg(target_os = "macos")'.dependencies]
hvf = { path = "../hvf" }

[dev-dependencies]
vmm-sys-util = "0.12.1"
