[package]
name = "krun-vmm"
version = "0.1.0-1.18.0"
authors = ["The libkrun Authors"]
edition = "2021"
build = "build.rs"
description = "Virtual machine monitor for libkrun"
license = "Apache-2.0"
repository = "https://github.com/containers/libkrun"

[features]
tee = ["devices/tee", "arch/tee"]
amd-sev = ["blk", "bitfield", "bitflags", "iocuddle", "tee", "kbs-types", "serde", "serde_json", "devices/amd-sev", "arch/amd-sev"]
tdx = ["blk", "tee", "kbs-types", "serde", "serde_json", "dep:tdx", "devices/tdx", "arch/tdx", "cpuid/tdx"]
net = ["devices/net"]
blk = ["devices/blk"]
gpu = ["devices/gpu", "krun_display"]
snd = ["devices/snd"]
input = ["devices/input", "krun_input"]
aws-nitro = []
vhost-user = ["devices/vhost-user"]

[dependencies]
crossbeam-channel = ">=0.5.15"
flate2 = "1.0.35"
libc = ">=0.2.39"
linux-loader = { version = "0.13.2", features = ["bzimage", "elf", "pe"] }
log = "0.4.0"
nix = { version = "0.30.1", features = ["fs", "term"] }
vm-memory = { version = "0.17.0", features = ["backend-mmap"] }
vmm-sys-util = "0.14"
krun_display = { package = "krun-display", version = "0.1.0", path = "../display", optional = true, features = ["bindgen_clang_runtime"] }
krun_input = { package = "krun-input", version = "0.1.0", path = "../input", optional = true, features = ["bindgen_clang_runtime"] }

arch = { package = "krun-arch", version = "=0.1.0-1.18.0", path = "../arch" }
arch_gen = { package = "krun-arch-gen", version = "=0.1.0-1.18.0", path = "../arch_gen" }
devices = { package = "krun-devices", version = "=0.1.0-1.18.0", path = "../devices" }
kernel = { package = "krun-kernel", version = "=0.1.0-1.18.0", path = "../kernel" }
utils = { package = "krun-utils", version = "=0.1.0-1.18.0", path = "../utils" }
polly = { package = "krun-polly", version = "=0.1.0-1.18.0", path = "../polly" }

# Dependencies for amd-sev
kbs-types = { version = "0.13.0", optional = true }
serde = { version = "1.0.125", optional = true }
serde_json = { version = "1.0.64", optional = true }
iocuddle = { version = "0.1.1", optional = true }
bitfield = { version = "0.19.4", optional = true }
bitflags = { version = "2.10.0", optional = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
bzip2 = "0.5"
cpuid = { package = "krun-cpuid", version = "=0.1.0-1.18.0", path = "../cpuid" }
zstd = "0.13"

[target.'cfg(target_os = "linux")'.dependencies]
tdx = { version = "0.1.0", optional = true }
kvm-bindings = { version = "0.12", features = ["fam-wrappers"] }
kvm-ioctls = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
hvf = { package = "krun-hvf", version = "=0.1.0-1.18.0", path = "../hvf" }

[dev-dependencies]
devices = { package = "krun-devices", version = "=0.1.0-1.18.0", path = "../devices", features = ["test_utils"] }
