[package]
name = "vmm"
version = "0.1.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2021"
build = "build.rs"

[features]
tee = []
amd-sev = [ "blk", "bitfield", "bitflags", "iocuddle", "tee", "kbs-types", "serde", "serde_json" ]
tdx = [ "blk", "tee", "kbs-types", "serde", "serde_json", "dep:tdx" ]
net = []
blk = []
efi = [ "blk", "net" ]
gpu = ["krun_display"]
snd = []
input = ["krun_input"]
aws-nitro = []

[dependencies]
crossbeam-channel = ">=0.5.15"
flate2 = "1.0.35"
libc = ">=0.2.39"
linux-loader = { version = "0.13.0", features = ["bzimage", "elf", "pe"] }
log = "0.4.0"
nix = { version = "0.30.1", features = ["fs", "term"] }
vm-memory = { version = ">=0.13", features = ["backend-mmap"] }
vmm-sys-util = ">=0.14"
krun_display = { path = "../krun_display", optional = true, features = ["bindgen_clang_runtime"] }
krun_input = { path = "../krun_input", optional = true, features = ["bindgen_clang_runtime"] }

arch = { path = "../arch" }
arch_gen = { path = "../arch_gen" }
devices = { path = "../devices" }
kernel = { path = "../kernel" }
utils = { path = "../utils" }
polly = { path = "../polly" }

# Dependencies for amd-sev
kbs-types = { version = "0.13.0", optional = true }
serde = { version = "1.0.125", optional = true }
serde_json = { version = "1.0.64", optional = true }
iocuddle = { version = "0.1.1", optional = true }
bitfield = { version = "0.19.4", optional = true }
bitflags = { version = "2.10.0", optional = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
bzip2 = "0.5"
cpuid = { path = "../cpuid" }
zstd = "0.13"

[target.'cfg(target_os = "linux")'.dependencies]
tdx = { version = "0.1.0", optional = true }
kvm-bindings = { version = ">=0.11", features = ["fam-wrappers"] }
kvm-ioctls = ">=0.21"

[target.'cfg(target_os = "macos")'.dependencies]
hvf = { path = "../hvf" }

[dev-dependencies]
devices = { path = "../devices", features = ["test_utils"] }
